--- a/frontend/financial-products/src/app/features/products/pages/product-list/product-list.component.html
+++ b/frontend/financial-products/src/app/features/products/pages/product-list/product-list.component.html
@@ -30,7 +30,7 @@
         (input)="onSearch(searchInput.value)"
       />
     </div>
-    <button class="add-btn" type="button">Agregar</button>
+    <button class="add-btn" type="button" [routerLink]="['/new']">Agregar</button>
   </div>
 
   <!-- Tabla de productos -->
