--- a/frontend/financial-products/src/app/features/products/components/product-form/product-form.component.html
+++ b/frontend/financial-products/src/app/features/products/components/product-form/product-form.component.html
@@ -1,43 +1,45 @@
-<div class="form-container">
-  <app-header title="Formulario de Registro"></app-header>
-  <form class="product-form">
-    <h2 class="form-title">Formulario de Registro</h2>
-    <div class="form-row">
-      <div class="form-group">
-        <label for="id">ID</label>
-        <input id="id" type="text" class="error" />
-        <div class="error-message">ID no válido!</div>
+<div class="form-page-container">
+  <div class="form-container">
+    <!--<app-header title="Formulario de Registro"></app-header>-->
+    <form class="product-form">
+      <h2 class="form-title">Formulario de Registro</h2>
+      <div class="form-row">
+        <div class="form-group">
+          <label for="id">ID</label>
+          <input id="id" type="text" class="error" />
+          <div class="error-message">ID no válido!</div>
+        </div>
+        <div class="form-group">
+          <label for="name">Nombre</label>
+          <input id="name" type="text" value="Tarjeta Crédito" />
+        </div>
       </div>
-      <div class="form-group">
-        <label for="name">Nombre</label>
-        <input id="name" type="text" value="Tarjeta Crédito" />
+      <div class="form-row">
+        <div class="form-group">
+          <label for="description">Descripción</label>
+          <input id="description" type="text" class="error" />
+          <div class="error-message">Este campo es requerido!</div>
+        </div>
+        <div class="form-group">
+          <label for="logo">Logo</label>
+          <input id="logo" type="text" class="error" />
+          <div class="error-message">Este campo es requerido!</div>
+        </div>
       </div>
-    </div>
-    <div class="form-row">
-      <div class="form-group">
-        <label for="description">Descripción</label>
-        <input id="description" type="text" class="error" />
-        <div class="error-message">Este campo es requerido!</div>
+      <div class="form-row">
+        <div class="form-group">
+          <label for="date-release">Fecha Liberación</label>
+          <input id="date-release" type="text" value="22/02/2023" />
+        </div>
+        <div class="form-group">
+          <label for="date-revision">Fecha Revisión</label>
+          <input id="date-revision" type="text" value="22/02/2024" disabled />
+        </div>
       </div>
-      <div class="form-group">
-        <label for="logo">Logo</label>
-        <input id="logo" type="text" class="error" />
-        <div class="error-message">Este campo es requerido!</div>
+      <div class="form-actions">
+        <button type="button" class="reset-btn">Reiniciar</button>
+        <button type="submit" class="submit-btn">Enviar</button>
       </div>
-    </div>
-    <div class="form-row">
-      <div class="form-group">
-        <label for="date-release">Fecha Liberación</label>
-        <input id="date-release" type="text" value="22/02/2023" />
-      </div>
-      <div class="form-group">
-        <label for="date-revision">Fecha Revisión</label>
-        <input id="date-revision" type="text" value="22/02/2024" disabled />
-      </div>
-    </div>
-    <div class="form-actions">
-      <button type="button" class="reset-btn">Reiniciar</button>
-      <button type="submit" class="submit-btn">Enviar</button>
-    </div>
-  </form>
+    </form>
+  </div>
 </div>
