--- a/frontend/financial-products/src/app/features/products/pages/product-list/product-list.component.scss
+++ b/frontend/financial-products/src/app/features/products/pages/product-list/product-list.component.scss
@@ -5,6 +5,17 @@
   max-width: 1100px;
   margin: 2rem auto;
 }
+.visually-hidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
 
 .header {
   display: flex;
